gccida/c3/walk_stmt_tree
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_stmt_tree/src/c-common.c:3710:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *result; // [rsp+10h] [rbp-30h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_stmt_tree/src/c-common.c:3711:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *resulta; // [rsp+10h] [rbp-30h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_stmt_tree/src/c-common.c:3713:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code; // [rsp+1Ch] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_stmt_tree/src/c-common.c:3723:27: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
if ( !statement_code_p( ( tree_code)( unsigned __int8)*( ( _DWORD *)&( *tpa)->common + 4)) ) 
                          ^~~~~~~~~
                          tree_cons
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_stmt_tree/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_stmt_tree/src/c-common.c:3723:39: error: expected expression
if ( !statement_code_p( ( tree_code)( unsigned __int8)*( ( _DWORD *)&( *tpa)->common + 4)) ) 
                                      ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_stmt_tree/src/obj/c-common.o] Error 1
